Fix Pagefind navbar alignment
Center the search trigger without moving the color-mode control and cover their vertical alignment.


Copilot-Session: 473cce2f-c7b7-4742-a19b-e08c3779f650

--- a/website/src/css/custom.scss
+++ b/website/src/css/custom.scss
@@ -60,6 +60,18 @@ html[data-theme="dark"] {
 	--pf-modal-backdrop: rgba(0, 0, 0, 0.7);
 }
 
+.pf-search-trigger {
+	display: flex;
+	align-items: center;
+	height: 100%;
+}
+
+.pf-search-trigger pagefind-modal-trigger {
+	display: flex;
+	align-items: center;
+	justify-content: center;
+}
+
 .pf-result-version {
 	display: inline-block;
 	margin-left: 0.5rem;
